Fixes an issue with code mirror content overflowing the enclosing text area on IOS

--- a/web-app/_weceem/css/admin.css
+++ b/web-app/_weceem/css/admin.css
@@ -129,3 +129,10 @@ Just change the color-values to apply your own color-scheme.
   color: #999999;
   text-align:right;
 }
+
+/*
+ * CodeMirror: Fixes an issue with Safari on Ipad where the code overflows the text area.
+ */
+.CodeMirror-wrapping {
+  overflow : scroll;
+}
